compiler/tests/err-ptr-arith.err.expect
tests/err-ptr-arith.c:7:14: error: invalid operands to '+': both operands are pointers
