compiler/tests/err-ptr-arith.c
int a;
int b;

int main() {
    int *p = &a;
    int *q = &b;
    return p + q;
}
